--- a/Markdown_Doc/summary.html
+++ b/Markdown_Doc/summary.html
@@ -276,6 +276,7 @@ of contents as rendered to the left.</p>
 - [MarkDown Documentation](Markdown_Doc/Markdown_Doc.md)
   - [Alerts](Markdown_Doc/Alerts.md)
   - [Alerts Directives](Markdown_Doc/Alerts_Directives.md)
+  - [Quiz](Markdown_Doc/Quiz.md)
   - [Summary](Markdown_Doc/summary.md) 
 - [Placeholder]()
 </code></pre>
@@ -283,7 +284,7 @@ of contents as rendered to the left.</p>
                     </main>
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../Markdown_Doc/Alerts_Directives.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../Markdown_Doc/Quiz.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -294,7 +295,7 @@ of contents as rendered to the left.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../Markdown_Doc/Alerts_Directives.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../Markdown_Doc/Quiz.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
