--- a/Markdown_Doc/Quiz.html
+++ b/Markdown_Doc/Quiz.html
@@ -33,6 +33,7 @@
         <link rel="stylesheet" href=".././theme/css/code.css">
         <link rel="stylesheet" href=".././theme/css/terminal.css">
         <link rel="stylesheet" href=".././theme/css/output.css">
+        <link rel="stylesheet" href=".././theme/css/mdbook-admonish.css">
 
         <!-- MathJax -->
         <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -116,16 +117,16 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="burgundy">Burgundy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="dracula">Dracula</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="ecoFriend">EcoFriend</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="kanagawa">Knagawa</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="pinkrose">Pinkrose</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="space">Space</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="sustain">Sustain</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="tender">Tender</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="tokyonight">Tokyonight</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
@@ -249,7 +250,7 @@ Immutable means "not mutable", or not changeable.
 </div>
 </div>
 <div class="quiz-placeholder" data-quiz-name="&quot;quiz_3&quot;" data-quiz-questions="{&quot;questions&quot;:[{&quot;context&quot;:&quot;For example, you can write: `let x = 1`&quot;,&quot;id&quot;:&quot;6fd3aca5-ad99-422d-92e2-285a426c04b6&quot;,&quot;type&quot;:&quot;ShortAnswer&quot;,&quot;answer&quot;:{&quot;answer&quot;:&quot;let&quot;},&quot;prompt&quot;:{&quot;prompt&quot;:&quot;What is the keyword for declaring a variable in Rust?&quot;}},{&quot;context&quot;:&quot;Immutable means \&quot;not mutable\&quot;, or not changeable.\n&quot;,&quot;id&quot;:&quot;d68e575b-ecef-4d15-9239-f2e44c1e2012&quot;,&quot;type&quot;:&quot;MultipleChoice&quot;,&quot;answer&quot;:{&quot;answer&quot;:&quot;`x` cannot be changed after being assigned to a value.&quot;},&quot;prompt&quot;:{&quot;distractors&quot;:[&quot;`x` is stored in the immutable region of memory.&quot;,&quot;After being defined, `x` can be changed at most once.&quot;,&quot;You cannot create a reference to `x`.&quot;],&quot;prompt&quot;:&quot;What does it mean if a variable `x` is immutable?&quot;}}]}" data-quiz-show-bug-reporter="&quot;&quot;"></div>
-<script type="text/javascript" src="../quiz/quiz-embed.iife.js"></script><link rel="stylesheet" type="text/css" href="../quiz/style.css">
+<script type="text/javascript" src="../quiz/quiz-embed.iife.js"></script><link rel="stylesheet" type="text/css" href="../quiz/style.css"><style>.scroll-to-top { font-size: 2.5rem; width: 3.2rem; height: 3.2rem; display: none; align-items: center; justify-content: center; position: fixed; padding: 0.75rem; bottom: 4rem; right: calc(1.25rem + 90px + var(--page-padding)); z-index: 999; cursor: pointer; border: none; color: var(--bg); background: var(--fg); border-radius: 50%; } .scroll-to-top.hidden { display: none; } .scroll-to-top i { transform: translateY(-2px); } @media (min-width: 1080px) { .scroll-to-top { display: flex; } }</style><button type="button" aria-label="scroll-to-top" class="scroll-to-top hidden" onclick="scrollToTop()"> <i class="fa fa-angle-up"></i></button><script>const scrollToTop = () => window.scroll({ top: 0, behavior: "smooth" }); window.addEventListener("scroll", () => { const button = document.querySelector(".scroll-to-top"); button.classList.toggle("hidden", window.scrollY <200); });</script><style>footer { text-align: center; text-wrap: balance; margin-top: 5rem; display: flex; flex-direction: column; justify-content: center; align-items: center; } footer p { margin: 0; }</style><footer><p>Copyright © 2025 • Created with ❤️ by <a href="https://github.com/CompEng0001">CompEng0001</a></p></footer>
                     </main>
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
